--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   </head>
   <body>
     <h1>Dogde Rect Remastered</h1>
+    <h3>WASD or Arrow Keys to move</h3>
+    <h3>Space to shoot</h3>
+    <h2>Press 'P' to play</h2>
     <canvas id="game"></canvas>
     <script src="index.js" type="module"></script>
   </body>
